# llm-granite-ft

./: .gitignore  Dockerfile  Dockerfile.chess  Dockerfile.function  Dockerfile.local  Dockerfile.osx  Dockerfile.torchao_fsdp2  README.md  analyze_chess_data.py  chess-finetune.py  docker-build-push.txt  download-models.py  ds_config_zero3.json  evaluate.py  extract_lines.py  finetune.py  finetune.slurm  format_chess_data.py  fsdp_config.yaml  function-finetune.py  preprocess_test.py  pyproject.toml  requirements.txt  submit_evaluate.sbatch  submit_finetune.sbatch  submit_finetune_chess.sbatch  submit_finetune_fsdp.sbatch  submit_finetune_function_calling.sbatch  submit_finetune_function_calling_local_image.sbatch  submit_finetune_torchao_fsdp2.sbatch
data/: test_extended.csv  train_extended.csv
fixed-scripts/: function-finetune-fixed.py  function-finetune-local-nvidia.py  function-finetune-osx-mlx.py  function-finetune-osx.py  function-finetune-torchao-fsdp2.py  generate_granite_fc_examples.py  process_glaive_fc_v2_to_granite.py  test_dataproc.py  view_formatted_data.py
