[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-granite-ft"
version = "0.1.0"
dependencies = [
    "transformers[torch]",
    "peft",
    "bitsandbytes",
    "datasets",
    "trl",
    "accelerate",
    "deepspeed",
    "evaluate",
    "scipy",
    "mlflow",
    "psutil",
    "pynvml",
]
requires-python = ">=3.10"

# Optional: Add other metadata if needed
# description = "Fine-tuning Granite LLM"
# authors = [{ name="Your Name", email="your.email@example.com" }]
# license = { text="MIT" }
# readme = "README.md"
